# ServerRemoteDash

./: Cargo.toml  gitlog.txt
bash_scripts/: api.sh  stress-web  stress-web.service  stress-web.sh  stress.sh  stressSystem.sh  system_monitor.sh
src/: example.rs  gcp_server.rs  graceful-tcp-monitor.py  gui.py  gui_connection.rs  main.rs  plotters_iced.rs  pressure_senders.rs  rust-to-python.py  stress_senders.rs  system-metrics-monitor-with-ip-arg.py  tcp-server-monitor.py
src/counter_example/: counter.rs
src/stressapp/: message.rs  mod.rs  monitor_chart.rs  server_chart.rs  util_chart.rs
